Fixed Alien Nav Mesh
Fixed Alien Nav Mesh agent path finding

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -56,5 +56,5 @@
         "temp/": true,
         "Temp/": true
     },
-    "dotnet.defaultSolution": "Castle Defence.sln"
+    "dotnet.defaultSolution": "Castle-Defence.sln"
 }
